fixed issue with caledar overlapping images on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -146,7 +146,9 @@ div[data-title]:hover:after {
   min-width:150px; 
   max-width:150px;
 }
-@media (min-width: 320px) and (max-width: 750px){
-  .cal { right: 0; }
-  .container { left: 0; top: 67px; }
+@media screen and (max-width: 1785px) {
+  .caledar {
+    margin-top: 400px;
+    margin-left: 700px;
   }
+}
